fix: dropdown: make content scroll if dropdown too long

--- a/src/components/Dropdown/dropdown.module.scss
+++ b/src/components/Dropdown/dropdown.module.scss
@@ -12,6 +12,8 @@
         opacity: 0;
         white-space: normal;
         z-index: $z-index-400;
+        max-height: 34vh;
+        overflow-y: auto;
 
         &.open {
             animation: slideUpIn $motion-duration-extra-fast
